manifest/world-api/10.world-fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-fastapi
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-fastapi
  template:
    metadata:
      labels:
        app: hello-fastapi
    spec:
      containers:
        - name: hello-fastapi
          image: fastapi-app:latest # Docker 이미지 이름
          imagePullPolicy: IfNotPresent # 로컬에 이미지가 있으면 재풀하지 않음
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-fastapi-service
  namespace: hello
spec:
  selector:
    app: hello-fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP # 외부 노출을 위해 Ingress를 사용할 예정이므로 ClusterIP
